<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="12dp"
    android:layout_marginEnd="10dp"
    android:layout_marginBottom="40dp">

    <ImageView
        android:id="@+id/image_burger"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/image_burger_craze"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewDiscount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/discount_image"
        android:gravity="center_vertical"
        android:paddingStart="20dp"
        android:text="Spend 25$, save $5"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@id/image_burger"
        app:layout_constraintTop_toTopOf="@+id/image_burger" />

    <LinearLayout
        android:id="@+id/linearLayoutTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_burger">

        <TextView
            android:id="@+id/textView_burger"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Burger craze"
            android:textColor="@color/gray_burger"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/image_burger" />

        <View
            android:id="@+id/viewGreenPoint"
            android:layout_width="6dp"
            android:layout_height="6dp"
            android:layout_marginStart="8dp"
            android:background="@drawable/ellipse_28"
            app:layout_constraintBottom_toBottomOf="@id/textView_burger"
            app:layout_constraintStart_toEndOf="@+id/textView_burger"
            app:layout_constraintTop_toTopOf="@id/textView_burger" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="OPEN"
            android:textColor="@color/green"
            android:textSize="18dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/viewGreenPoint"
            app:layout_constraintStart_toEndOf="@+id/viewGreenPoint"
            app:layout_constraintTop_toTopOf="@+id/viewGreenPoint" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutDescr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutTitle">

        <ImageView
            android:id="@+id/imageViewStar"
            android:layout_width="12dp"
            android:layout_height="12dp"
            android:src="@drawable/vector_2" />

        <TextView
            android:id="@+id/textViewRate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6.5dp"
            android:text="@string/_4_6"
            android:textColor="@color/gray_burger" />

        <TextView
            android:id="@+id/textViewParticipants"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="7dp"
            android:text="(601)"
            android:textColor="@color/gray_text_rv" />

        <TextView
            android:id="@+id/textViewPlace"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8.5dp"
            android:text="American"
            android:textColor="@color/gray_text_rv" />

        <View
            android:id="@+id/viewGrayPoint"
            android:layout_width="3dp"
            android:layout_height="3dp"
            android:layout_marginStart="7dp"
            android:background="@drawable/gray_point" />

        <TextView
            android:id="@+id/textViewCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="7dp"
            android:text="Burgers"
            android:textColor="@color/gray_text_rv" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayoutDescr">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Delivery: "
            android:textColor="@color/gray_text_rv"
            android:textSize="12dp" />

        <TextView
            android:id="@+id/textViewDelivery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/free"
            android:textColor="@color/gray_text_rv"
            android:textSize="12dp" />

        <View
            android:layout_width="3dp"
            android:layout_height="3dp"
            android:layout_marginHorizontal="8dp"
            android:background="@drawable/gray_point" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/minimum"
            android:textColor="@color/gray_text_rv"
            android:textSize="12dp" />

        <TextView
            android:id="@+id/textViewMinPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_10"
            android:textColor="@color/gray_text_rv"
            android:textSize="12dp" />

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonTime"
        style="@style/Time.Button"
        android:layout_marginTop="14dp"
        android:text="@string/_15_20_min"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_burger" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:gravity="center_vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonTime">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_direction" />

        <TextView
            android:id="@+id/textViewDistance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="7dp"
            android:text="1.5 km"
            android:textColor="@color/gray_text_rv" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=" away"
            android:textColor="@color/gray_text_rv" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>